# biencore

./: README.md  prd.txt
backend/src/: tests.rs
frontend/tests/: web.rs
kawaii_antivirus/static/: style.css
kawaii_antivirus/templates/: base.html  index.html
kawaii_antivirus_rs/: README.md
kawaii_antivirus_rs/backend/: Cargo.toml
kawaii_antivirus_rs/backend/src/: claude_ai.rs  main.rs
kawaii_antivirus_rs/frontend/: Cargo.toml
kawaii_antivirus_rs/frontend/src/: lib.rs
kawaii_antivirus_rs/frontend/static/: index.html  style.css
