[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] } # For JSON response
actix-multipart = "0.6"
futures-util = "0.3"
sanitize-filename = "0.5"
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"
lazy_static = "1.4.0"
infer = "0.15" # For MIME type detection
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2" # For running async tests
actix-http = "3" # For test requests and responses
bytes = "1" # For payload manipulation in tests
mime = "0.3" # For checking content types
