[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
reqwasm = "0.5"
web-sys = { version = "0.3", features = [
    "File",
    "FileList",
    "HtmlInputElement",
    "FormData",
    "ProgressEvent", # For upload progress, if needed later
    "console", # For logging
    "HtmlElement", # Basic DOM manipulation
    "DomTokenList" # For class list manipulation
] }
wasm-bindgen-futures = "0.4" # To await futures in JS
serde = { version = "1.0", features = ["derive"] } # For deserializing the backend response
gloo-utils = { version = "0.2.0", features = ["serde"] } # For FromWasmAbi
# gloo-file = "0.3" # Consider if direct web-sys becomes too cumbersome

[dev-dependencies]
wasm-bindgen-test = "0.3"
